--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                 </tr>
             </thead>
             <tbody class="table-content">
-                <tr>
+                <tr colspan="2">
                     <td>Founded 2017 by Taleb Benouaer</td>
+                </tr>
+                <tr colspan="2">
                     <td>Software development and Technology Consulting</td>
                 </tr>
-                
             </tbody>
         </table>
     </body>
