--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profile.png" alt="">
+        <img class="img-fluid" src="img/profilePic.jpg" alt="">
         <div class="intro-text">
           <span class="name">Taleb Benouaer</span>
-          <hr class="star-light">
+          <hr class="star-primary">
           <span class="skills">Fullstack Developer - Java Expertise - Technology Consulting</span>
         </div>
       </div>
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section class="success" id="portfolio">
       <div class="container">
         <h2 class="text-center">Portfolio</h2>
-        <hr class="star-primary">
+        <hr class="star-light">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
@@ -132,10 +132,10 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
       <div class="container">
         <h2 class="text-center">About</h2>
-        <hr class="star-light">
+        <hr class="star-primary">
         <div class="row">
           <div class="col-lg-4 ml-auto">
             <p>Senior Technical Consultant with 8+ years experience in software development
@@ -158,10 +158,10 @@ NodeJS and Apache Camel.</p>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section  class="success"  id="contact">
       <div class="container">
         <h2 class="text-center">Contact Me</h2>
-        <hr class="star-primary">
+        <hr class="star-light">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
