update images and some css

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -52,7 +52,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profilePic.jpg" alt="">
+        <img class="img-fluid" src="img/profilePic.jpeg" alt="">
         <div class="intro-text">
           <span class="name">Taleb Benouaer</span>
           <hr class="star-primary">
@@ -61,11 +61,37 @@
       </div>
     </header>
 
+        <!-- About Section -->
+        <section class="success" id="about">
+            <div class="container">
+              <h2 class="text-center">About</h2>
+              <hr class="star-light">
+              <div class="row">
+                <div class="col-lg-3 ml-auto">
+                  <p>Senior Technical Consultant with 8+ years experience in software development
+                      and technology consulting.</p>
+                </div>
+                <div class="col-lg-3 mr-auto">
+                  <p>Worked on a variety of IT transformation projects
+                      across various industries including healthcare, banking and retail.</p>
+                </div>
+                <div class="col-lg-3 mr-auto">
+                  <p>Delivered cutting edge solutions using a multitude of technologies including Java, 
+                    Spring, NodeJS and Apache Camel.</p>
+                </div>
+                <div class="col-lg-3 mr-auto">
+                  <p>Worked across design, build, and test, 
+                    using agile and waterfall methodologies, in small and large teams.</p>
+                </div>
+              </div>
+            </div>
+          </section>
+
     <!-- Portfolio Grid Section -->
-    <section class="success" id="portfolio">
+    <section id="projects">
       <div class="container">
-        <h2 class="text-center">Portfolio</h2>
-        <hr class="star-light">
+        <h2 class="text-center">Projects</h2>
+        <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
@@ -74,7 +100,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/hmcts.jpeg" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -84,7 +110,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+              <img class="img-fluid" src="img/portfolio/moj-noms.jpeg" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -94,7 +120,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="img/portfolio/barclays.jpeg" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -104,7 +130,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+              <img class="img-fluid" src="img/portfolio/cpw.jpeg" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -114,7 +140,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              <img class="img-fluid" src="img/portfolio/dwp.jpeg" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -124,33 +150,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about">
-      <div class="container">
-        <h2 class="text-center">About</h2>
-        <hr class="star-primary">
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p>Senior Technical Consultant with 8+ years experience in software development
-and technology consulting.</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p>Worked on a variety of IT transformation projects
-across various industries including healthcare, banking and retail, delivering
-cutting edge solutions using a multitude of technologies including Java, Spring,
-NodeJS and Apache Camel.</p>
-          </div>
-          <div class="col-lg-8 mx-auto text-center">
-            <a href="#" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i>
-              Download Theme
+              <img class="img-fluid" src="img/portfolio/nhs.jpeg" alt="">
             </a>
           </div>
         </div>
@@ -285,9 +285,9 @@ NodeJS and Apache Camel.</p>
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>HMCTS Reform - Probate</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cabin.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/hmcts.jpeg" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
@@ -329,9 +329,9 @@ NodeJS and Apache Camel.</p>
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>MoJ NOMS - Strategic Partner Gateway</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cake.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/moj-noms.jpeg" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
@@ -373,9 +373,9 @@ NodeJS and Apache Camel.</p>
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Barclays Nimble</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/circus.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/barclays.jpeg" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
@@ -417,9 +417,9 @@ NodeJS and Apache Camel.</p>
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Carphone Warehouse - Beehive</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/game.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/cpw.jpeg" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
@@ -461,9 +461,9 @@ NodeJS and Apache Camel.</p>
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>DWP - Universal Credit</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/safe.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/dwp.jpeg" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
@@ -505,9 +505,9 @@ NodeJS and Apache Camel.</p>
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>NHS - PACS</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/submarine.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/nhs.jpeg" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
