add project information

--- a/index.html
+++ b/index.html
@@ -288,23 +288,18 @@
                   <h2>HMCTS Reform - Probate</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/hmcts.jpeg" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Senior developer in the HMCTS Reform programme, delivering digital services following GDS principles and methodologies.
+                      As part of the probate project team, taleb is working on the frontend application built using NodeJS, 
+                      as well as the backend services built following the microservices architecture, with self-contained modules exposed via REST APIs.</p>
                   <ul class="list-inline item-details">
                     <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
+                      <strong>Ministry of Justice HMCTS Reform</strong>
                     </li>
                     <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
+                      <strong>July 2016 - Present</strong>
                     </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
+                    <li>Role:
+                      <strong>Senior developer</strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
@@ -332,23 +327,19 @@
                   <h2>MoJ NOMS - Strategic Partner Gateway</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/moj-noms.jpeg" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Lead developer within a team responsible for building a message routing system to integrate the MoJ NOMS's central systems 
+                    with external partner systems. Taleb was part of the initial team that kick-started the agile delivery lifecycle, 
+                    creating all the main building blocks, making crucial implementation decisions and driving the delivery of a secure, 
+                    scalable and responsive system. The system was built using Apache Camel, and integrated with SOAP, JAX-RS and ActiveMQ endpoints.</p>
                   <ul class="list-inline item-details">
                     <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
+                      <strong>Ministry of Justice NOMS</strong>
                     </li>
                     <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
+                      <strong>May 2015 - June 2016</strong>
                     </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
+                    <li>Role:
+                      <strong>Lead developer</strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
@@ -376,23 +367,19 @@
                   <h2>Barclays Nimble</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/barclays.jpeg" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Senior technical consultant in a transformation project to streamline and digitize the corporate on-boarding process within the bank, 
+                    bringing significant savings in time and cost. Taleb was one of three senior specialists, 
+                    driving the integration of the Oracle rules engine (OPA) that sits at the heart of the application, 
+                    to automate the business decisions that form part of the on-boarding process</p>
                   <ul class="list-inline item-details">
                     <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
+                      <strong>Barclays Corporate</strong>
                     </li>
                     <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
+                      <strong>November 2013 - April 2015</strong>
                     </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
+                    <li>Role:
+                      <strong>Senior Technical Consultant</strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
@@ -420,23 +407,19 @@
                   <h2>Carphone Warehouse - Beehive</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/cpw.jpeg" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Senior developer in a team tasked with creating a new web-based sales platform for the retailer's various product offerings. 
+                    The Java-based application incorporated the latest web frameworks, including backbone, handlebars, and cordova. 
+                    I worked across the various application tiers including web, data persistence/retrieval, 
+                    and web service integration using various technologies including Spring, Apache Solr, Ajax</p>
                   <ul class="list-inline item-details">
                     <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
+                      <strong>Carphone Warehouse</strong>
                     </li>
                     <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
+                      <strong>May 2013 - November 2013</strong>
                     </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
+                    <li>Role:
+                      <strong>Software Engineer</strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
@@ -464,23 +447,19 @@
                   <h2>DWP - Universal Credit</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/dwp.jpeg" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Senior developer on a project delivering a web solution based on Oracle Policy Automation. 
+                    The solution, one of the biggest OPA implementations in the world, automates welfare application assessments 
+                    for millions of users across the country. Although my main focus was the development and integration of the OPA rulebase, 
+                    I worked with colleagues across onshore and offshore teams to deliver a working end to end solution for each of the project’s Agile iteration cycles.</p>
                   <ul class="list-inline item-details">
                     <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
+                      <strong>Department of Work and Pensions</strong>
                     </li>
                     <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
+                      <strong>May 2011 - May 2013</strong>
                     </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
+                    <li>Role:
+                      <strong>Software Engineer</strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
@@ -508,23 +487,18 @@
                   <h2>NHS - PACS</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/nhs.jpeg" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Joined the NHS PACS team as a functional tester, quickly moving to system testing and development.
+                    Also worked on small prototype web applications and utilities that complement the main PACS solution.
+                  </p>
                   <ul class="list-inline item-details">
                     <li>Client:
-                      <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                      </strong>
+                      <strong>NHS</strong>
                     </li>
                     <li>Date:
-                      <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
-                      </strong>
+                      <strong>April 2010 - April 2011</strong>
                     </li>
-                    <li>Service:
-                      <strong>
-                        <a href="http://startbootstrap.com">Web Development</a>
-                      </strong>
+                    <li>Role:
+                      <strong>Software Engineer</strong>
                     </li>
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
