--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
               <h3>Around the Web</h3>
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-facebook"></i>
+                  <a class="btn-social btn-outline" href="https://github.com/benouaer">
+                    <i class="fa fa-fw fa-github"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
+                  <a class="btn-social btn-outline" href="https://plus.google.com/+TalebBenouaer">
                     <i class="fa fa-fw fa-google-plus"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
+                  <a class="btn-social btn-outline" href="https://uk.linkedin.com/in/benouaer">
                     <i class="fa fa-fw fa-linkedin"></i>
                   </a>
                 </li>
