tidy up styling of project images

--- a/index.html
+++ b/index.html
@@ -92,65 +92,55 @@
       <div class="container">
         <h2 class="text-center">Projects</h2>
         <hr class="star-primary">
-        <div class="row">
-          <div class="col-sm-4 portfolio-item">
+        <div class="row justify-content-center">
+          <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/hmcts.jpeg" alt="">
+              <img class="img-fluid img-thumbnail" src="img/portfolio/hmcts.jpeg" alt="">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/moj-noms.jpeg" alt="">
+              <img class="img-fluid img-thumbnail" src="img/portfolio/moj-noms.jpeg" alt="">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/barclays.jpeg" alt="">
+              <img class="img-fluid img-thumbnail" src="img/portfolio/barclays.jpeg" alt="">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cpw.jpeg" alt="">
+              <img class="img-fluid img-thumbnail" src="img/portfolio/cpw.jpeg" alt="">
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/dwp.jpeg" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/nhs.jpeg" alt="">
+              <img class="img-fluid img-thumbnail" src="img/portfolio/dwp.jpeg" alt="">
             </a>
           </div>
         </div>
@@ -442,45 +432,6 @@
                     </li>
                     <li>Date:
                       <strong>May 2011 - May 2013</strong>
-                    </li>
-                    <li>Role:
-                      <strong>Software Engineer</strong>
-                    </li>
-                  </ul>
-                  <button class="btn btn-success" type="button" data-dismiss="modal">
-                    <i class="fa fa-times"></i>
-                    Close</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <h2>NHS - PACS</h2>
-                  <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/nhs.jpeg" alt="">
-                  <p>Joined the NHS PACS team as a functional tester, quickly moving to system testing and development.
-                    Also worked on small prototype web applications and utilities that complement the main PACS solution.
-                  </p>
-                  <ul class="list-inline item-details">
-                    <li>Client:
-                      <strong>NHS</strong>
-                    </li>
-                    <li>Date:
-                      <strong>April 2010 - April 2011</strong>
                     </li>
                     <li>Role:
                       <strong>Software Engineer</strong>
