--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="modal-body">
                   <h2>HMCTS Reform - Probate</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/hmcts.jpeg" alt="">
+                  <img class="img-fluid img-thumbnail img-centered" src="img/portfolio/hmcts.jpeg" alt="">
                   <p>Senior developer in the HMCTS Reform programme, delivering digital services following GDS principles and methodologies.
                       As part of the probate project team, taleb is working on the frontend application built using NodeJS, 
                       as well as the backend services built following the microservices architecture, with self-contained modules exposed via REST APIs.</p>
@@ -301,7 +301,7 @@
                 <div class="modal-body">
                   <h2>MoJ NOMS - Strategic Partner Gateway</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/moj-noms.jpeg" alt="">
+                  <img class="img-fluid img-thumbnail img-centered" src="img/portfolio/moj-noms.jpeg" alt="">
                   <p>Lead developer within a team responsible for building a message routing system to integrate the MoJ NOMS's central systems 
                     with external partner systems. Taleb was part of the initial team that kick-started the agile delivery lifecycle, 
                     creating all the main building blocks, making crucial implementation decisions and driving the delivery of a secure, 
@@ -341,7 +341,7 @@
                 <div class="modal-body">
                   <h2>Barclays Nimble</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/barclays.jpeg" alt="">
+                  <img class="img-fluid img-thumbnail img-centered" src="img/portfolio/barclays.jpeg" alt="">
                   <p>Senior technical consultant in a transformation project to streamline and digitize the corporate on-boarding process within the bank, 
                     bringing significant savings in time and cost. Taleb was one of three senior specialists, 
                     driving the integration of the Oracle rules engine (OPA) that sits at the heart of the application, 
@@ -381,7 +381,7 @@
                 <div class="modal-body">
                   <h2>Carphone Warehouse - Beehive</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cpw.jpeg" alt="">
+                  <img class="img-fluid img-thumbnail img-centered" src="img/portfolio/cpw.jpeg" alt="">
                   <p>Senior developer in a team tasked with creating a new web-based sales platform for the retailer's various product offerings. 
                     The Java-based application incorporated the latest web frameworks, including backbone, handlebars, and cordova. 
                     I worked across the various application tiers including web, data persistence/retrieval, 
@@ -421,7 +421,7 @@
                 <div class="modal-body">
                   <h2>DWP - Universal Credit</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/dwp.jpeg" alt="">
+                  <img class="img-fluid img-thumbnail img-centered" src="img/portfolio/dwp.jpeg" alt="">
                   <p>Senior developer on a project delivering a web solution based on Oracle Policy Automation. 
                     The solution, one of the biggest OPA implementations in the world, automates welfare application assessments 
                     for millions of users across the country. Although my main focus was the development and integration of the OPA rulebase, 
