--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profilePic.jpeg" alt="">
+        <img class="img-fluid" src="img/profile.jpeg" alt="">
         <div class="intro-text">
           <span class="name">Taleb Benouaer</span>
           <hr class="star-primary">
@@ -455,10 +455,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
